* Address description logic (used by memcheck and helgrind)
  now describes addressed in anonymous segments, file mmap-ed
  segments, shared memory segments and the brk data segment.

* Option --error-markers=<begin>,<end> can be used to mark
  the begin/end of errors in textual output mode, to facilitate
  searching/extracting errors in output files mixing valgrind
  errors with program output.

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

116002  VG_(printf): Problems with justification of strings and integers
155125  avoid cutting away file:lineno after long function name
197259  Unsupported arch_prtctl PR_SET_GS option
211926  Avoid compilation warnings in valgrind.h with -pedantic
226609  Crediting upstream authors in man page
269360  s390x: Fix addressing mode selection for compare-and-swap
333051  mmap of huge pages fails due to incorrect alignment
        == 339163
334802  valgrind does not always explain why a given option is bad
335785  amd64->IR 0xC4 0xE2 0x75 0x2F (vmaskmovpd)
        == 307399
        == 343175
        == 342740
338731  ppc: Fix testuite build for toolchains not supporting -maltivec
338995  shmat with hugepages (SHM_HUGETLB) fails with EINVAL
339045  Getting valgrind to compile and run on OS X Yosemite (10.10)
        == 340252
339156  gdbsrv not called for fatal signal
339288  support Cavium Octeon MIPS specific BBIT*32 instructions
339442  Fix testsuite build failure on OS X 10.9